# sdm-system

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  deploy-to-server.sh  docker-compose.yml  report.md  report.zh-CN.md
.claude/: settings.json  (+1 more)
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  add.ps  create_admin.py  field.sql  migrate_to_rbac.sql  pyproject.toml  rbac_init_data.sql  rbac_tables.sql  requirements.txt  run.sh  table.sql  tree.txt
backend/app/: CLAUDE.md  database.py  db_migrations.py  main.py  schemas.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: config.py  display_name.py  pii.py  security.py  sensitive_field_crypto.py
backend/app/crud/: crud.py  crud_activity.py  crud_activity_type.py  crud_admin.py  crud_auth.py  crud_checkin.py  crud_community_channel.py  crud_community_comment.py  crud_community_moderation.py  crud_community_post.py  crud_credential.py  crud_notification.py  crud_participant.py  crud_payment.py  crud_rbac.py  crud_refund.py  crud_tenant.py  crud_user.py  crud_user_activity_type.py
backend/app/models/: __init__.py  activity.py  activity_type.py  admin.py  auth.py  checkin.py  community.py  member.py  models.py  notification.py  participant.py  payment.py  rbac.py  tenant.py  user.py
backend/app/schemas/: database.py  schemas.py
backend/app/services/: notification_center.py  wechat_content_security.py  wechat_pay.py  wechat_subscribe.py
backend/docs/: 鉴权说明.md
backend/migrations/: add_member_system.sql  add_poster_and_location.sql  add_tenant_fields.sql  add_user_profile_fields.sql  perf_stage4_add_indexes.sql
backend/scripts/: generate_lorchin_subset_font.py  hash_admin_password.py  import_teams_community.py  migrate_user_names_to_plaintext.py  verify_admin_password.py  verify_and_update_admin_password.py
backend/sql/: field.sql  table.sql
backend/tests/: README.md  __init__.py  conftest.py  factories.py  test_member.py
(+477 files in other folders)
